# job-chatbot-vteam-hybrid

./: .env.example  .gitignore  README-AGENTS.md  pyproject.toml
docs/: PRD.md  PRODUCT-DESIGN.md  README.md  SYSTEM-DESIGN.md  TESTING.md  UAT-PLAN.md  USER-MANUAL.md
src/python/job_chatbot/: __init__.py  main.py  models.py  orchestrator.py
src/python/job_chatbot/agents/: __init__.py  company_confirm.py  scraper.py
src/python/job_chatbot/tools/: __init__.py  companies.py  storage.py  workday.py
src/python/job_chatbot/workers/: __init__.py  db_worker.py  tester_worker.py
tests/: test_smoke.py
